# CGoGN_3

./: .gitignore  CMakeLists.txt  CMakeSettings.json
cgogn/core/: CMakeLists.txt
cgogn/core/apps/: CMakeLists.txt  core_test.cpp
cgogn/core/ui_modules/: mesh_data.h  mesh_provider.h
cgogn/geometry/apps/: CMakeLists.txt  bgfx_test.cpp  constriction.cpp
cgogn/geometry/ui_modules/: registration.h  surface_constriction.h  surface_differential_properties.h  surface_filtering.h  surface_heat_method.h  surface_selection.h  volume_selection.h
cgogn/io/: CMakeLists.txt
cgogn/modeling/apps/: CMakeLists.txt  convex_hull.cpp  deformation.cpp
cgogn/modeling/ui_modules/: skeleton_extractor_module.h  surface_deformation.h  surface_modeling.h  tubular_mesh_module.h  volume_deformation.h  volume_mr_modeling.h
cgogn/rendering/: CMakeLists.txt  bgfx_utils.h  bx_additional.cmake  fbo.cpp  mesh_render.h  mesh_render_base.h  shader_program.cpp  shader_program.h  shaders.cmake  texture.h  vao.h  vbo.h  vertex_layout.h
cgogn/rendering/apps/: CMakeLists.txt  bgfx_dummy_test.cpp  bgfx_flat_test.cpp  bgfx_test.cpp  simple_gm2_viewer.cpp
cgogn/rendering/shaders/: outliner.cpp  outliner.h  shader_bold_line.cpp  shader_edge.cpp  shader_edge.h  shader_flat.cpp  shader_flat.h  shader_phong.cpp  shader_point_sprite_bx.cpp  shader_point_sprite_bx.h
cgogn/rendering/shaders_sc/cube_shader/: fs_cube.sc  makefile  vs_cube.sc
cgogn/rendering/shaders_sc/cube_shader/compiled/: fs_cube_compiled
cgogn/rendering/shaders_sc/cube_shader_2/: varying.def.sc  vs_cube.sc
cgogn/rendering/shaders_sc/cube_shader_2/compiled/: vs_cube_compiled
cgogn/rendering/shaders_sc/edge/: fs_edge.sc  varying.def.sc
cgogn/rendering/shaders_sc/shader_flat/: fs_flat.sc  vs_flat.sc
cgogn/rendering/shaders_sc/shader_phong/: fs_phong.sc  varying.def.sc  vs_phong.sc
cgogn/rendering/shaders_sc/simple_cube/: fs_cubes.sc  vs_cubes.sc
cgogn/rendering/ui_modules/: graph_render.h  surface_render.h  surface_render_bgfx.h  topo_render.h  vector_per_face_render.h  vector_per_vertex_render.h  volume_render.h
cgogn/simulation/apps/: CMakeLists.txt
cgogn/simulation/ui_modules/: shallow_water.h
cgogn/ui/: CMakeLists.txt  add_picture.cpp  add_picture.h  app.cpp  app.h  camera.cpp  common.cmake  gl_viewer.cpp  module.cpp  module.h  view.cpp  view.h
